<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/vol_menu_events"
        android:title="@string/events"
        android:icon="@drawable/ic_events"/>

    <item
        android:id="@+id/vol_menu_orgs"
        android:title="@string/organizations"
        android:icon="@drawable/ic_organizations"/>

    <item
        android:id="@+id/vol_menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/vol_menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_log_out"/>

    <item
        android:id="@+id/vol_menu_delete"
        android:title="@string/delete_account"
        android:icon="@drawable/ic_delete"/>

</menu>