<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.SplashActivity"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:text="@string/login_as"
        android:clickable="true"
        android:layout_marginBottom="@dimen/padding_default"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginBottom="@dimen/padding_2x"
            android:background="@android:drawable/divider_horizontal_bright"/>

        <TextView
            android:id="@+id/volunteer_button"
            android:layout_width="175dp"
            android:gravity="center"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_bg"
            android:text="@string/volunteer"
            android:textAllCaps="true"
            android:padding="@dimen/padding_default"
            android:textSize="@dimen/typography_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/organization_button"
            android:layout_marginTop="@dimen/padding_default"
            android:layout_width="175dp"
            android:gravity="center"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_primary_bg"
            android:text="@string/organization"
            android:textAllCaps="true"
            android:padding="@dimen/padding_default"
            android:textSize="@dimen/typography_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>


</LinearLayout>
